# movies-spark

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yml  exploratory.ipynb  pyproject.toml
clickhouse/docker-entrypoint-initdb.d/: init.sql
clickhouse/users.d/: users.xml
src/: clean_name_basics.py  clean_title_aka.py  clean_title_basics.py  clean_title_crew.py  clean_title_principals.py  clean_title_ratings.py  convert_tsv_to_parquet.py
