[tool.poetry]
name = "movies-spark"
version = "0.1.0"
description = ""
authors = ["Cody Yu <codyyu717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^13.0.0"
polars = "^0.19.8"
pyspark = "3.4"
dbt-core = "<1.5.0"
dbt-clickhouse = "^1.4.8"

[tool.poetry.group.lint.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.6.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
disallow_untyped_defs = "True"
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
